<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_roster_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kbaldauf.playerfinder.activity.RosterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/activity_roster_container" />

    <include
        android:id="@+id/loading_spinner"
        layout="@layout/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintCenterX_toCenterX="@id/activity_roster_container"
        app:layout_constraintCenterY_toCenterY="@id/activity_roster_container" />

    <include
        android:id="@+id/error_message"
        layout="@layout/error_message"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintCenterX_toCenterX="@id/activity_roster_container"
        app:layout_constraintCenterY_toCenterY="@id/activity_roster_container" />

    <LinearLayout
        android:id="@+id/roster_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintCenterX_toCenterX="@id/activity_roster_container"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/uniform_number"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:inputType="number" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
