<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_team_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kbaldauf.playerfinder.activity.TeamActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/activity_team_container" />

    <include
        android:id="@+id/loading_spinner"
        layout="@layout/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintCenterX_toCenterX="@id/activity_team_container"
        app:layout_constraintCenterY_toCenterY="@id/activity_team_container" />

    <include
        android:id="@+id/error_message"
        layout="@layout/error_message"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintCenterX_toCenterX="@id/activity_team_container"
        app:layout_constraintCenterY_toCenterY="@id/activity_team_container" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/team_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/activity_team_container"
        app:layout_constraintLeft_toLeftOf="@id/activity_team_container"
        app:layout_constraintRight_toRightOf="@id/activity_team_container"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

</android.support.constraint.ConstraintLayout>
